https://github.com/PhamDat-16/OOP_N03_Term3_2025_K17_Group4/tree/master/gs-serving-web-content-main

--- a/gs-serving-web-content-main/complete/pom.xml
+++ b/gs-serving-web-content-main/complete/pom.xml
@@ -84,9 +84,9 @@
 		</plugins>
 		<resources>
 			<resource>
-				<directory>complete/src/main/resources</directory>
+				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
-		<sourceDirectory>complete/src/main/java</sourceDirectory>
+		<sourceDirectory>src/main/java</sourceDirectory>
 	</build>
 </project>
